Wed May 26 20:19:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): add the result of random to the
	  beginning of range, not the opposite.  [ruby-dev:41415]

Wed May 26 19:55:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (file_expand_path): revert a part of r22392. it's commit miss.

Wed May 26 12:08:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (random_rand): subtraction method of non-numeric can
	  return Float.  [ruby-dev:41410]

Wed May 26 10:35:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rb_cv_large_fd_select): needed on mingw, even
	  though fd_mask is not available.  [ruby-core:30401]

Wed May 26 00:13:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (add_code_range_to_buf0): fix false negative
	  warning when given range is just before previous range.
	  [ruby-dev:41406]

Tue May 25 16:37:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-style.el (ruby-style-version): take revision if
	  keyword is expanded. [ruby-dev:41408]

Tue May 25 13:26:49 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/vm.h, include/ruby/encoding.h: add external
	  linkage.

Tue May 25 01:46:49 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_eval.c (rb_f_caller): update rdoc.  a patch from Nobuhiro IMAI
	  <nov at yo.rim.or.jp> in [ruby-dev:41387].

Mon May 24 19:00:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (warn_balanced, parser_yylex): no warnings after closing
	  parens.

Mon May 24 08:16:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_f_spawn): use correct command name for the error
	  message.  [ruby-dev:41395]

Fri May 21 01:06:05 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* thread.c (subtract_tv): if the rest is zero, should finish waiting
	  immediately.

	* win32/win32.c (subtract): ditto.
	  based on a patch from Roger Pack in [ruby-core:27957].

Thu May 20 22:49:04 2010  Yusuke Endoh  <mame@tsg.ne.jp>
